--- a/features/app/src/main/res/layout/fragment_locations_list.xml
+++ b/features/app/src/main/res/layout/fragment_locations_list.xml
@@ -19,8 +19,9 @@
         android:id="@+id/locationsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
         app:spanCount="2"
+        android:orientation="vertical"
         tools:listitem="@layout/item_location"
         tools:itemCount="15"
         app:layout_constraintTop_toBottomOf="@+id/toolbarView"
