--- a/features/app/src/main/res/values/colors.xml
+++ b/features/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="topaz">#14adb8</color>
+    <color name="brownish_gray">#666666</color>
+    <color name="black_10">#19000000</color>
+    <color name="golden_yellow">#ffc71e</color>
 </resources>
