--- a/features/app/src/main/res/layout/fragment_locations_list.xml
+++ b/features/app/src/main/res/layout/fragment_locations_list.xml
@@ -50,46 +50,9 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <include
         android:id="@+id/bottomBarView"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@drawable/topaz_outline"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/homeIconView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="19.1dp"
-            android:layout_marginStart="46dp"
-            android:src="@drawable/ic_home_on"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/mapIconView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="19.1dp"
-            android:src="@drawable/ic_map_off"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/profileIconView"
-            app:layout_constraintStart_toEndOf="@+id/homeIconView"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/profileIconView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="19.1dp"
-            android:layout_marginEnd="46dp"
-            android:src="@drawable/ic_profile_off"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        layout="@layout/view_bottom_bar"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
