--- a/features/app/src/main/res/values/colors.xml
+++ b/features/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="brownish_gray">#666666</color>
     <color name="black_10">#19000000</color>
     <color name="golden_yellow">#ffc71e</color>
+    <color name="transparent">#00ffffff</color>
 </resources>
