--- a/features/app/src/main/res/layout/fragment_establishment.xml
+++ b/features/app/src/main/res/layout/fragment_establishment.xml
@@ -1,230 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
+        android:layout_height="match_parent"
         >
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsingToolbar"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomBarComponent"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:fitsSystemWindows="true"
-            app:contentScrim="@color/black_10"
-            app:scrimVisibleHeightTrigger="30dp"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
+            android:layout_height="match_parent"
             >
 
             <ImageView
                 android:id="@+id/toolbarImageView"
-                android:contentDescription="@string/toolbarImage_description"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:elevation="1dp"
+                android:layout_height="200dp"
+                app:layout_constraintTop_toTopOf="parent"
                 android:backgroundTint="@color/transparent"
-                android:fitsSystemWindows="true"
+                android:contentDescription="@string/toolbarImage_description"
                 android:scaleType="centerCrop"
-                android:visibility="visible"
-                app:layout_collapseParallaxMultiplier="0.3"
                 android:src="@drawable/download"
-                app:layout_collapseMode="parallax" />
+                android:visibility="visible" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="19dp"
-                android:elevation="10dp"
-                >
-
-                <ImageView
-                    android:id="@+id/arrowBackView"
-                    android:contentDescription="@string/back_button_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_back"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    />
-
-                <ImageView
-                    android:id="@+id/shareView"
-                    android:contentDescription="@string/share_button_description"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_share"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/descriptionComponentView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        app:layout_anchor="@id/appBarLayout"
-        android:elevation="1dp"
-        android:padding="16dp"
-        android:background="@color/topaz"
-        app:layout_anchorGravity="bottom"
-        >
-
-        <TextView
-            android:id="@+id/nameTitleView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Establishment"
-            android:textColor="@color/white"
-            android:textSize="32sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <RatingBar
-            android:id="@+id/ratingStarsView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:progressTint="@color/golden_yellow"
-            android:clickable="false"
-            android:isIndicator="true"
-            android:max="5"
-            android:numStars="5"
-            tools:rating="4"
-            app:layout_constraintTop_toBottomOf="@id/nameTitleView"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/ratingScoreView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            tools:text="Rating"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/nameTitleView"
-            app:layout_constraintStart_toEndOf="@id/ratingStarsView"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nestedScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/nestedComponentView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="60dp"
-            android:layout_marginStart="26dp"
-            android:visibility="visible"
-            >
-
-            <TextView
-                android:id="@+id/picturesTitleView"
+            <ImageView
+                android:id="@+id/arrowBackView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="@string/pictures_text"
-                android:textAllCaps="true"
-                android:textColor="@color/topaz"
-                android:textSize="16sp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/back_button_description"
+                android:src="@drawable/ic_arrow_back"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/picturesCollectionView"
+            <ImageView
+                android:id="@+id/shareView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 android:layout_marginTop="16dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:orientation="horizontal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/picturesTitleView" />
-
-            <TextView
-                android:id="@+id/aboutTitleView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="@string/about_text"
-                android:textAllCaps="true"
-                android:textColor="@color/topaz"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/picturesCollectionView"
-                />
-
-            <TextView
-                android:id="@+id/aboutTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:textSize="14sp"
-                tools:text="Written About"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/aboutTitleView" />
+                android:contentDescription="@string/share_button_description"
+                android:src="@drawable/ic_share"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/component"
+                android:id="@+id/descriptionComponentView"
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_marginTop="18dp"
-                android:background="@color/black_10"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/aboutTextView" />
-
-            <TextView
-                android:id="@+id/reviewsTitleView"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="@string/reviews_text"
-                android:textAllCaps="true"
-                android:textColor="@color/topaz"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/component"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/toolbarImageView"
+                android:background="@color/topaz"
+                android:padding="16dp"
+                android:visibility="visible"
+                >
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/reviewsCollectionView"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/nameTitleView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="32sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Establishment" />
+
+                <RatingBar
+                    android:id="@+id/ratingStarsView"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:isIndicator="true"
+                    android:max="5"
+                    android:numStars="5"
+                    android:progressTint="@color/golden_yellow"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nameTitleView"
+                    tools:rating="4" />
+
+                <TextView
+                    android:id="@+id/ratingScoreView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toEndOf="@id/ratingStarsView"
+                    app:layout_constraintTop_toBottomOf="@id/nameTitleView"
+                    tools:text="Rating" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/nestedComponentView"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:orientation="vertical"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/reviewsTitleView"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/descriptionComponentView"
+                android:layout_marginStart="26dp"
+                android:layout_marginTop="60dp"
+                android:visibility="visible"
+                >
+
+                <TextView
+                    android:id="@+id/picturesTitleView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:text="@string/pictures_text"
+                    android:textAllCaps="true"
+                    android:textColor="@color/topaz"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/picturesCollectionView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/picturesTitleView" />
+
+                <TextView
+                    android:id="@+id/aboutTitleView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:text="@string/about_text"
+                    android:textAllCaps="true"
+                    android:textColor="@color/topaz"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/picturesCollectionView" />
+
+                <TextView
+                    android:id="@+id/aboutTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:textSize="14sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/aboutTitleView"
+                    tools:text="Written About" />
+
+                <include
+                    android:id="@+id/contactsComponent"
+                    layout="@layout/view_contacts_component"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/aboutTextView" />
+
+                <TextView
+                    android:id="@+id/reviewsTitleView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:text="@string/reviews_text"
+                    android:textAllCaps="true"
+                    android:textColor="@color/topaz"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/contactsComponent" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/reviewsCollectionView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/reviewsTitleView" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 
     <include
-        android:layout_gravity="bottom"
+        android:id="@+id/bottomBarComponent"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         layout="@layout/view_bottom_bar"
         />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
