--- a/features/app/src/main/res/layout/item_picture.xml
+++ b/features/app/src/main/res/layout/item_picture.xml
@@ -4,9 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     app:cardCornerRadius="8dp"
-    android:backgroundTint="@color/topaz"
+    android:backgroundTint="@color/orange"
     >
 
     <ImageView
