--- a/features/app/src/main/res/layout/fragment_establishment.xml
+++ b/features/app/src/main/res/layout/fragment_establishment.xml
@@ -64,7 +64,7 @@
                 >
 
                 <TextView
-                    android:id="@+id/nameTitleView"
+                    android:id="@+id/establishmentTitleView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
@@ -84,7 +84,7 @@
                     android:numStars="5"
                     android:progressTint="@color/golden_yellow"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/nameTitleView"
+                    app:layout_constraintTop_toBottomOf="@id/establishmentTitleView"
                     tools:rating="4" />
 
                 <TextView
@@ -95,7 +95,7 @@
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@id/ratingStarsView"
-                    app:layout_constraintTop_toBottomOf="@id/nameTitleView"
+                    app:layout_constraintTop_toBottomOf="@id/establishmentTitleView"
                     tools:text="Rating" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -150,6 +150,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:layout_marginEnd="26dp"
                     android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/aboutTitleView"
@@ -178,13 +179,48 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/reviewsCollectionView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:layout_marginEnd="26dp"
                     android:orientation="vertical"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/reviewsTitleView" />
+                    app:layout_constraintTop_toBottomOf="@+id/reviewsTitleView"
+                    tools:itemCount="3"
+                    tools:listitem="@layout/item_review" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/moreReviewsComponent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="26dp"
+                    android:paddingBottom="32dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/reviewsCollectionView">
+
+                    <TextView
+                        android:id="@+id/moreReviewsView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:text="ver todos os 15 reviews"
+                        android:textColor="@color/topaz"
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toStartOf="@+id/arrowsView"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/arrowsView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_arrows"
+                        app:layout_constraintTop_toTopOf="@id/moreReviewsView"
+                        app:layout_constraintBottom_toBottomOf="@+id/moreReviewsView"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
