--- a/features/app/src/main/res/layout/item_location.xml
+++ b/features/app/src/main/res/layout/item_location.xml
@@ -72,7 +72,7 @@
 
         <TextView
             android:id="@+id/ratingScoreView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             tools:text="Rating"
