Added loading and error view to screen, some refactoring

--- a/features/app/src/main/res/layout/fragment_establishment.xml
+++ b/features/app/src/main/res/layout/fragment_establishment.xml
@@ -32,7 +32,8 @@
         android:id="@+id/nestedComponentView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
+        android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottomBarComponent"
         >
