--- a/features/app/src/main/res/layout/fragment_locations_list.xml
+++ b/features/app/src/main/res/layout/fragment_locations_list.xml
@@ -30,6 +30,7 @@
         android:id="@+id/errorView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/bottomBarView"
         app:layout_constraintEnd_toEndOf="@+id/toolbarView"
         app:layout_constraintStart_toStartOf="parent"
