--- a/features/app/src/main/res/layout/view_contacts_component.xml
+++ b/features/app/src/main/res/layout/view_contacts_component.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
@@ -19,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="seg a sex: 7h as 23h"
+        tools:text="seg a sex: 7h as 23h"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/timeIconView"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,8 +29,9 @@
         android:id="@+id/weekendHoursView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginStart="10dp"
-        android:text="sab e dom: 7h as 23h"
+        tools:text="sab e dom: 7h as 23h"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/timeIconView"
         app:layout_constraintTop_toBottomOf="@id/weekdayHoursView" />
@@ -38,17 +40,17 @@
         android:id="@+id/phoneIconView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="21dp"
         android:src="@drawable/ic_phone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timeIconView" />
+        app:layout_constraintTop_toBottomOf="@id/weekdayHoursView" />
 
     <TextView
         android:id="@+id/phoneNumberView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="+551199999999"
+        tools:text="+551199999999"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/phoneIconView"
         app:layout_constraintBottom_toBottomOf="@id/phoneIconView"
@@ -68,18 +70,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="Rua do ouro, 297 - Serra"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/pinIconView"
-        app:layout_constraintBottom_toBottomOf="@id/pinIconView"
-        />
+        app:layout_constraintTop_toTopOf="@+id/pinIconView"
+        tools:text="Rua do ouro, 297 - Serra" />
 
     <TextView
         android:id="@+id/stateLocationView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="Belo Horizonte - Minas Gerais"
+        tools:text="Belo Horizonte - Minas Gerais"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/pinIconView"
         app:layout_constraintTop_toBottomOf="@id/addressView"
